# notepad-turbo

./: .cursorrules  CLAUDE.md  CMakeLists.txt  Makefile  README.md
doc/: Key_Bindings.md  Menu.md  Palette.md  TODO.md
src/: CMakeLists.txt  FileEncoding.cpp  FileEncoding.h  Finder.cpp  Finder.h  IEditorAPI.h  IFaceTable.cpp  IFaceTable.h  IFaceTableMixer.cpp  IFaceTableMixer.h  ITextBuffer.h  IniSettings.cpp  IniSettings.h  LuaExtension.cpp  LuaExtension.h  LuaState.cpp  LuaState.h  Macro.cpp  Macro.h  MacroManager.cpp  MacroManager.h  MacroManagerSettings.cpp  MacroRecorder.cpp  MacroRecorder.h  MacroReplay.cpp  MacroStep.cpp  MacroStep.h  NNApplication.cpp  NNApplication.h  NNCommands.h  NNDocument.cpp  NNDocument.h  NNEditor.cpp  NNEditor.h  NNEditorManager.cpp  NNEditorManager.h  NNMenus.cpp  NNMenus.h  NNStatusLine.cpp  NNStatusLine.h  (+11 more)
src/dialogs/: NNEncodingDialog.cpp  NNEncodingDialog.h  NNFindReplaceDialog.cpp  NNFindReplaceDialog.h  NNGotoLineDialog.cpp  NNGotoLineDialog.h  NNMacroRunDialog.cpp  NNMacroRunDialog.h  NNMacroSaveDialog.cpp  NNMacroSaveDialog.h  NNPreferencesDialog.cpp  NNPreferencesDialog.h
src/languages/: abaqus.lua  actionscript.lua  ada.lua  asm.lua  asn1.lua  asp.lua  autoit.lua  avs.lua  baanc.lua  bash.lua  batch.lua  blitzbasic.lua  c.lua  caml.lua  cmake.lua  cobol.lua  coffeescript.lua  cpp.lua  cs.lua  csound.lua  css.lua  d.lua  diff.lua  erlang.lua  escript.lua  forth.lua  fortran.lua  fortran77.lua  freebasic.lua  go.lua  gui4cli.lua  haskell.lua  html.lua  ihex.lua  ini.lua  inno.lua  java.lua  javascript.lua  json.lua  kix.lua  (+47 more)
src/scripts/: init.lua
test/: CMakeLists.txt  file_encoding_test.cpp  finder_test.cpp  ini_settings_test.cpp  macro_recorder_test.cpp  macro_test.cpp  nn_document_test.cpp  nn_editor_test.cpp  nn_idocument_test.cpp  nn_test_helpers.h  nn_window_test.cpp  recent_files_test.cpp  session_manager_test.cpp  smoke_test.cpp  sorter_test.cpp  uchardet_test.cpp  util.cpp  util.h
